implementacion seguridad